# observable-security-agent

./: .env.example  .gitignore  AGENTS.md  COMPETITION_README.md  FINAL_VALIDATION_REPORT.md  Makefile  NOTICE  README.md  README_DEMO.md  agent.py  pyproject.toml  requirements.txt
agent_loop/: __init__.py  actions.py  memory.py  planner.py  policy.py  runner.py  task_graph.py
ai/: __init__.py  compliance_reasoner.py  fallbacks.py  models.py  prompts.py  reasoning.py
api/: __init__.py  explain.py  server.py
classification/: __init__.py  classify_tracker_gap.py
config/: 3pao-sufficiency-rules.yaml  authorization-scope.yaml  conmon-catalog.yaml  control-crosswalk.yaml  control-mapping-rules.yaml  evidence-source-registry.yaml  ksi-catalog.yaml  poam-policy.yaml  public-exposure-policy.yaml  reporting-policy.yaml  system-boundary.yaml  validation-policy.yaml
core/: __init__.py  agent_models.py  agent_security_outputs.py  assurance_package.py  assurance_reports.py  conmon_reasonableness.py  control_mapper.py  control_mapping_engine.py  csv_utils.py  deterministic_validators.py  domain_models.py  eval_harness.py  evaluator.py  evidence_compactor.py  evidence_contract.py  evidence_gap.py  evidence_graph.py  evidence_normalization.py  failure_narrative_contract.py  golden_path.py  guardrails.py  human_review.py  models.py  normalizer.py  observability.py  output_validation.py  pipeline_models.py  poam.py  rag_context_builder.py  rag_context_debug.py  recommendation_generator.py  report_writer.py  secure_agent_architecture.py  threat_hunt_agentic.py  utils.py
(+501 files in other folders)
